# webrtc-service

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: main-pipeline.yml
migrations/2023-06-03-195238_create_users_table/: up.sql
migrations/2023-06-03-195657_create_roles_table/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: constants.rs  mod.rs
src/auth/rbac/: access_type.rs  mod.rs  policy.rs  protected_route.rs  rbac_table.rs  user_role.rs
src/constants/: cookies.rs  mod.rs
src/errors/: constants.rs  error_enum.rs  from_errors.rs  mod.rs
src/errors/tests/: error_enum_tests.rs  mod.rs
src/models/: mod.rs  user.rs
src/models/tests/: mod.rs  user_model_tests.rs
src/route_handlers/: mod.rs
src/route_handlers/auth/: mod.rs
src/route_handlers/auth/get_oauth_access_token/: mod.rs  models.rs  process_id_token.rs
src/route_handlers/auth/shared/: mod.rs  models.rs
src/route_handlers/auth/start_oauth_flow/: mod.rs  models.rs
src/route_handlers/users/: mod.rs
src/route_handlers/users/create/: helpers.rs  mod.rs
src/route_handlers/users/create/tests/: get_column_name_from_err_details.rs  mod.rs
src/settings/: development.toml  mod.rs  oauth.rs  settings.rs
src/state/auth/: metadata.rs  mod.rs
