[package]
name = "conversation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"]}
actix-web = "4.3.1"
config = { version = "0.13.1", features = ["toml"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
lazy_static = "1.4.0"
openidconnect = "3.2.0"
regex = "1.8.4"
serde = "1.0.163"
serde_test = "1.0.152"
serde_json = "1.0.96"
strum = "0.24"
strum_macros = "0.24.3"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres", "uuid", "time", "chrono"] }
test-case = "3.0.0"
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.3.3", features = ["serde", "v4"], default-features = false}